--- a/proyectoEquinoBackend/static/assets/contacto.html
+++ b/proyectoEquinoBackend/static/assets/contacto.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/styles_contacto.css">
+    <link rel="stylesheet" href="/static/css/styles_contacto.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
@@ -14,11 +14,11 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="eventos.html">Eventos</a>
-        <a href="equinos.html">Equinos</a>
-        <a href="blog.html">Blog</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/static/assets/index.html">Inicio</a>
+        <a href="/static/assets/eventos.html">Eventos</a>
+        <a href="/equinos/pagina_equinos/">Ver Equinos</a>
+        <a href="/static/assets/blog.html">Blog</a>
+        <a href="/static/assets/contacto.html">Contacto</a>
     </nav>
 
     <div class="container">
@@ -47,6 +47,6 @@
 
     <!-- Asistente con IA -->
     <div id="asistente-container"></div>
-    <script src="js/asistente.js"></script>
+    <script src="/static/js/asistente.js"></script>
 </body>
 </html>
