--- a/proyectoEquinoBackend/static/assets/eventos.html
+++ b/proyectoEquinoBackend/static/assets/eventos.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario de Eventos</title>
-    <link rel="stylesheet" href="css/styles_evento.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles_eventos.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
         <h1>Calendario de Eventos - Criadero Villa Rosa</h1>
     </header>
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="eventos.html">Eventos</a>
-        <a href="equinos.html">Equinos</a>
-        <a href="blog.html">Blog</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/static/assets/index.html">Inicio</a>
+        <a href="/static/assets/eventos.html">Eventos</a>
+        <a href="/equinos/pagina_equinos/">Ver Equinos</a>
+        <a href="/static/assets/blog.html">Blog</a>
+        <a href="/static/assets/contacto.html">Contacto</a>
     </nav>
     <div class="container">
         <div id="monthYear" class="monthYear"></div>
@@ -40,8 +40,8 @@
     <footer>
         <p>© 2025 Criadero Villa Rosa</p>
     </footer>
-    <script src="js/script_eventos.js"></script>
-    <script src="js/asistente.js"></script>
+    <script src="/static/js/script_eventos.js"></script>
+    <script src="/static/js/asistente.js"></script>
     <div id="asistente-container"></div>
 </body>
 </html>
